// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dummy.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./dummy');
var xxx = 0;
xxx

=====================================output=====================================
require("./dummy");
var xxx = 0;
xxx;

================================================================================
`;
